# OTAESGCM

./: .cproject  .gitignore  .project  .travis.yml  OPENTRV_README.txt  PortableUnitTestsDriver.sh  README.md  build.xml  meson.build
code/aes128_gcm/: .cproject  .project  aes128.cpp  aes128.h  aes128_gcm.cpp  aes128_gcm.h
code/aesGcmTest/: aesGcmTest.ino  unitTest.h
content/OTAESGCM/: OTAESGCM.h  README_OTAESGCM.txt  RELEASES_OTAESGCM.txt
content/OTAESGCM/utility/: OTAESGCM_OTAES128.cpp  OTAESGCM_OTAES128.h  OTAESGCM_OTAES128AVR.cpp  OTAESGCM_OTAES128AVR.h  OTAESGCM_OTAES128Impls.h  OTAESGCM_OTAESGCM.cpp  OTAESGCM_OTAESGCM.h
oiriginalcode/aes128_gcm/: aes128.cpp  aes128_gcm.cpp
oiriginalcode/aes128_gcm_compileSizeTest/: aes128_gcm_compileSizeTest.ino
originalcode/aes128_gcm/: .autotools  aes128.cpp  aes128_gcm.cpp
originalcode/aes128_gcm_compileSizeTest/: aes128_gcm_compileSizeTest.ino
portableUnitTests/: OTAESGCM Debug.launch  OTAESGCM_PUT.h  README.txt  main.cpp
test/: platform.local.txt  test.ino  unitTest.cpp  unitTest.h
